Cleanup Configuration.java