@@ -38,7 +38,7 @@ import java.util.*;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.stream.Collectors;
 
-public class Configuration implements Config {
+public class Configuration {
   protected static final ConfigParseOptions PARSE_OPTIONS =
       ConfigParseOptions.defaults().setAllowMissing(false).setSyntax(ConfigSyntax.CONF);
   protected static final ConfigRenderOptions RENDER_OPTIONS =
@@ -47,47 +47,42 @@ public class Configuration implements Config {
   protected static final File CONFIG_FILE =
       new File(ProxyChat.getInstance().getConfigFolder(), CONFIG_FILE_NAME);
 
-  private static final java.util.concurrent.atomic.AtomicReference<Object> header = new java.util.concurrent.atomic.AtomicReference<Object>();
+  private static final java.util.concurrent.atomic.AtomicReference<Object> header = new java.util.concurrent.atomic.AtomicReference<>();
 
-
-  private static Configuration currentConfig;
+  private static Configuration instance;
   protected Config config;
+
+  protected Configuration() {
+  }
 
   /**
    * Creates and loads the config. Also saves it so that all missing values exist!<br>
    * Also set currentConfig to this config.
-   *
-   * @return a configuration object, loaded from the config file.
    */
-  public static Configuration load() {
+  public static void load() {
     Configuration config = new Configuration();
     config.loadConfig();
 
-    currentConfig = config;
-
-    return currentConfig;
+    instance = config;
   }
 
-  public static Configuration get() {
-    return currentConfig;
+  public static Config get() {
+    return instance.getConfig();
   }
 
   private static String loadHeader() {
     StringBuilder header = new StringBuilder();
 
     try {
-      BufferedReader reader = new BufferedReader(new InputStreamReader(Objects.requireNonNull(ProxyChat.getInstance().getClass().getClassLoader().getResourceAsStream(CONFIG_FILE_NAME)), StandardCharsets.UTF_8));
-      try {
+      try (BufferedReader reader = new BufferedReader(new InputStreamReader(Objects.requireNonNull(
+              ProxyChat.getInstance().getClass().getClassLoader().getResourceAsStream(CONFIG_FILE_NAME)),
+                                                                            StandardCharsets.UTF_8))) {
         String line;
         do {
           line = reader.readLine();
-          if (line == null) throw new IOException("Unexpeted EOF while reading " + CONFIG_FILE_NAME);
+          if (line == null) throw new IOException("Unexpected EOF while reading " + CONFIG_FILE_NAME);
           header.append(line).append('\n');
         } while (line.startsWith("#"));
-      } finally {
-        if (reader != null) {
-          reader.close();
-        }
       }
     } catch (IOException e) {
       LoggerHelper.error("Error loading file header", e);
@@ -149,7 +144,7 @@ public class Configuration implements Config {
     config = config.resolve();
 
     convertOldConfig();
-    // Reapply default config. By default this does nothing but it can fix the missing config
+    // Reapply default config. By default, this does nothing, but it can fix the missing config
     // settings in some cases
     config = config.withFallback(strippedDefautConfig);
     copyComments(defaultConfig);
@@ -159,18 +154,14 @@ public class Configuration implements Config {
 
   protected void saveConfig() {
     try {
-      PrintWriter writer = new PrintWriter(CONFIG_FILE, StandardCharsets.UTF_8.name());
-      try {
+      //noinspection CharsetObjectCanBeUsed
+      try (PrintWriter writer = new PrintWriter(CONFIG_FILE, StandardCharsets.UTF_8.name())) {
         String renderedConfig = config.root().render(RENDER_OPTIONS);
         renderedConfig = getHeader() + renderedConfig;
         writer.print(renderedConfig);
-      } finally {
-        if (writer != null) {
-          writer.close();
-        }
       }
     } catch (FileNotFoundException | UnsupportedEncodingException e) {
-      LoggerHelper.error("Something very unexpected happend! Please report this!", e);
+      LoggerHelper.error("Something very unexpected happened! Please report this!", e);
     }
   }
 
@@ -201,6 +192,7 @@ public class Configuration implements Config {
           langFile = new File(langDir, lang + ".lang");
 
           if (langFile.exists()) {
+            //noinspection ResultOfMethodCallIgnored
             langFile.delete();
           }
         }
@@ -212,11 +204,11 @@ public class Configuration implements Config {
       case "11.3":
         LoggerHelper.info("Performing config migration 11.3 -> 11.4 ...");
 
-        final Config gloabalServerList = config.getConfig("Modules.GlobalChat.serverList");
+        final Config globalServerList = config.getConfig("Modules.GlobalChat.serverList");
 
         // Copy over server list from Global to AutoBroadcast if it is enabled
-        if (gloabalServerList.getBoolean("enabled")) {
-          config = config.withValue("Modules.AutoBroadcast.serverList", gloabalServerList.root());
+        if (globalServerList.getBoolean("enabled")) {
+          config = config.withValue("Modules.AutoBroadcast.serverList", globalServerList.root());
         }
       case "11.4":
         LoggerHelper.info("Performing config migration 11.4 -> 11.5 ...");
@@ -242,7 +234,7 @@ public class Configuration implements Config {
 
         broadcasts.add(existing);
 
-        // Convert autobroadcast settings to a list
+        // Convert auto-broadcast settings to a list
         config =
             config
                 .withoutPath("Modules.AutoBroadcast")
@@ -301,20 +293,21 @@ public class Configuration implements Config {
         broadcasts = new ArrayList<>();
         ConfigList existingBroadcasts = config.getList("Modules.AutoBroadcast.broadcasts");
 
-        //Convert autobroadcast messages from legacy to minimessage syntax
+        //Convert auto-broadcast messages from legacy to minimessage syntax
         for (ConfigValue broadcast : existingBroadcasts) {
           if(!(broadcast instanceof ConfigObject)) {
-            LoggerHelper.warning("Skipping invalid autobroadcast config");
+            LoggerHelper.warning("Skipping invalid auto-broadcast config");
             continue;
           }
 
           Map<String, Object> value = ((ConfigObject) broadcast).unwrapped();
 
           if(!(value.get("messages") instanceof List)) {
-            LoggerHelper.warning("Skipping invalid autobroadcast config");
+            LoggerHelper.warning("Skipping invalid auto-broadcast config");
             return;
           }
 
+          //noinspection unchecked
           value.put("messages", ((List<String>) value.get("messages")).stream()
                   .map(message -> ComponentUtil.miniMessage.serialize(
                           ComponentUtil.legacySerializer.deserialize(message)))
@@ -323,7 +316,7 @@ public class Configuration implements Config {
           broadcasts.add(ConfigValueFactory.fromAnyRef(value));
         }
 
-        // Convert autobroadcast settings to a list
+        // Convert auto-broadcast settings to a list
         config =
             config
                 .withoutPath("Modules.AutoBroadcast.broadcasts")
@@ -352,7 +345,7 @@ public class Configuration implements Config {
                                                    config.getString("PrefixSuffixSettings.defaultSuffix")))));
 
       default:
-        // Unknow Version or old version
+        // Unknown Version or old version
         // -> Update version
         config =
             config.withValue(
@@ -375,7 +368,7 @@ public class Configuration implements Config {
       paths.addAll(
           getPaths(currentConfig).stream()
               .map(newPath -> path + '.' + newPath)
-              .collect(Collectors.toList()));
+              .toList());
 
       // If the current value has a comment we will not override it
       if (!getComment(currentConfig).isEmpty()) continue;
@@ -392,17 +385,13 @@ public class Configuration implements Config {
     }
   }
 
-  protected Configuration() {
-  }
-
   protected static String getHeader() {
     Object value = Configuration.header.get();
     if (value == null) {
       synchronized (Configuration.header) {
         value = Configuration.header.get();
         if (value == null) {
-          final String actualValue = loadHeader();
-          value = actualValue == null ? Configuration.header : actualValue;
+          value = loadHeader();
           Configuration.header.set(value);
         }
       }
@@ -410,227 +399,7 @@ public class Configuration implements Config {
     return (String) (value == Configuration.header ? null : value);
   }
 
-  public com.typesafe.config.ConfigObject root() {
-    return this.config.root();
-  }
-
-  public com.typesafe.config.ConfigOrigin origin() {
-    return this.config.origin();
-  }
-
-  public com.typesafe.config.Config withFallback(final com.typesafe.config.ConfigMergeable arg0) {
-    return this.config.withFallback(arg0);
-  }
-
-  public com.typesafe.config.Config resolve() {
-    return this.config.resolve();
-  }
-
-  public com.typesafe.config.Config resolve(final com.typesafe.config.ConfigResolveOptions arg0) {
-    return this.config.resolve(arg0);
-  }
-
-  public boolean isResolved() {
-    return this.config.isResolved();
-  }
-
-  public com.typesafe.config.Config resolveWith(final com.typesafe.config.Config arg0) {
-    return this.config.resolveWith(arg0);
-  }
-
-  public com.typesafe.config.Config resolveWith(final com.typesafe.config.Config arg0, final com.typesafe.config.ConfigResolveOptions arg1) {
-    return this.config.resolveWith(arg0, arg1);
-  }
-
-  public void checkValid(final com.typesafe.config.Config arg0, final java.lang.String... arg1) {
-    this.config.checkValid(arg0, arg1);
-  }
-
-  public boolean hasPath(final java.lang.String arg0) {
-    return this.config.hasPath(arg0);
-  }
-
-  public boolean hasPathOrNull(final java.lang.String arg0) {
-    return this.config.hasPathOrNull(arg0);
-  }
-
-  public boolean isEmpty() {
-    return this.config.isEmpty();
-  }
-
-  public java.util.Set<java.util.Map.Entry<java.lang.String, com.typesafe.config.ConfigValue>> entrySet() {
-    return this.config.entrySet();
-  }
-
-  public boolean getIsNull(final java.lang.String arg0) {
-    return this.config.getIsNull(arg0);
-  }
-
-  public boolean getBoolean(final java.lang.String arg0) {
-    return this.config.getBoolean(arg0);
-  }
-
-  public java.lang.Number getNumber(final java.lang.String arg0) {
-    return this.config.getNumber(arg0);
-  }
-
-  public int getInt(final java.lang.String arg0) {
-    return this.config.getInt(arg0);
-  }
-
-  public long getLong(final java.lang.String arg0) {
-    return this.config.getLong(arg0);
-  }
-
-  public double getDouble(final java.lang.String arg0) {
-    return this.config.getDouble(arg0);
-  }
-
-  public java.lang.String getString(final java.lang.String arg0) {
-    return this.config.getString(arg0);
-  }
-
-  public <T extends java.lang.Enum<T>> T getEnum(final java.lang.Class<T> arg0, final java.lang.String arg1) {
-    return this.config.<T>getEnum(arg0, arg1);
-  }
-
-  public com.typesafe.config.ConfigObject getObject(final java.lang.String arg0) {
-    return this.config.getObject(arg0);
-  }
-
-  public com.typesafe.config.Config getConfig(final java.lang.String arg0) {
-    return this.config.getConfig(arg0);
-  }
-
-  public java.lang.Object getAnyRef(final java.lang.String arg0) {
-    return this.config.getAnyRef(arg0);
-  }
-
-  public com.typesafe.config.ConfigValue getValue(final java.lang.String arg0) {
-    return this.config.getValue(arg0);
-  }
-
-  public java.lang.Long getBytes(final java.lang.String arg0) {
-    return this.config.getBytes(arg0);
-  }
-
-  public com.typesafe.config.ConfigMemorySize getMemorySize(final java.lang.String arg0) {
-    return this.config.getMemorySize(arg0);
-  }
-
-  @Deprecated
-  public java.lang.Long getMilliseconds(final java.lang.String arg0) {
-    return this.config.getMilliseconds(arg0);
-  }
-
-  @Deprecated
-  public java.lang.Long getNanoseconds(final java.lang.String arg0) {
-    return this.config.getNanoseconds(arg0);
-  }
-
-  public long getDuration(final java.lang.String arg0, final java.util.concurrent.TimeUnit arg1) {
-    return this.config.getDuration(arg0, arg1);
-  }
-
-  public java.time.Duration getDuration(final java.lang.String arg0) {
-    return this.config.getDuration(arg0);
-  }
-
-  public java.time.Period getPeriod(final java.lang.String arg0) {
-    return this.config.getPeriod(arg0);
-  }
-
-  public java.time.temporal.TemporalAmount getTemporal(final java.lang.String arg0) {
-    return this.config.getTemporal(arg0);
-  }
-
-  public com.typesafe.config.ConfigList getList(final java.lang.String arg0) {
-    return this.config.getList(arg0);
-  }
-
-  public java.util.List<java.lang.Boolean> getBooleanList(final java.lang.String arg0) {
-    return this.config.getBooleanList(arg0);
-  }
-
-  public java.util.List<java.lang.Number> getNumberList(final java.lang.String arg0) {
-    return this.config.getNumberList(arg0);
-  }
-
-  public java.util.List<java.lang.Integer> getIntList(final java.lang.String arg0) {
-    return this.config.getIntList(arg0);
-  }
-
-  public java.util.List<java.lang.Long> getLongList(final java.lang.String arg0) {
-    return this.config.getLongList(arg0);
-  }
-
-  public java.util.List<java.lang.Double> getDoubleList(final java.lang.String arg0) {
-    return this.config.getDoubleList(arg0);
-  }
-
-  public java.util.List<java.lang.String> getStringList(final java.lang.String arg0) {
-    return this.config.getStringList(arg0);
-  }
-
-  public <T extends java.lang.Enum<T>> java.util.List<T> getEnumList(final java.lang.Class<T> arg0, final java.lang.String arg1) {
-    return this.config.<T>getEnumList(arg0, arg1);
-  }
-
-  public java.util.List<? extends com.typesafe.config.ConfigObject> getObjectList(final java.lang.String arg0) {
-    return this.config.getObjectList(arg0);
-  }
-
-  public java.util.List<? extends com.typesafe.config.Config> getConfigList(final java.lang.String arg0) {
-    return this.config.getConfigList(arg0);
-  }
-
-  public java.util.List<?> getAnyRefList(final java.lang.String arg0) {
-    return this.config.getAnyRefList(arg0);
-  }
-
-  public java.util.List<java.lang.Long> getBytesList(final java.lang.String arg0) {
-    return this.config.getBytesList(arg0);
-  }
-
-  public java.util.List<com.typesafe.config.ConfigMemorySize> getMemorySizeList(final java.lang.String arg0) {
-    return this.config.getMemorySizeList(arg0);
-  }
-
-  @Deprecated
-  public java.util.List<java.lang.Long> getMillisecondsList(final java.lang.String arg0) {
-    return this.config.getMillisecondsList(arg0);
-  }
-
-  @Deprecated
-  public java.util.List<java.lang.Long> getNanosecondsList(final java.lang.String arg0) {
-    return this.config.getNanosecondsList(arg0);
-  }
-
-  public java.util.List<java.lang.Long> getDurationList(final java.lang.String arg0, final java.util.concurrent.TimeUnit arg1) {
-    return this.config.getDurationList(arg0, arg1);
-  }
-
-  public java.util.List<java.time.Duration> getDurationList(final java.lang.String arg0) {
-    return this.config.getDurationList(arg0);
-  }
-
-  public com.typesafe.config.Config withOnlyPath(final java.lang.String arg0) {
-    return this.config.withOnlyPath(arg0);
-  }
-
-  public com.typesafe.config.Config withoutPath(final java.lang.String arg0) {
-    return this.config.withoutPath(arg0);
-  }
-
-  public com.typesafe.config.Config atPath(final java.lang.String arg0) {
-    return this.config.atPath(arg0);
-  }
-
-  public com.typesafe.config.Config atKey(final java.lang.String arg0) {
-    return this.config.atKey(arg0);
-  }
-
-  public com.typesafe.config.Config withValue(final java.lang.String arg0, final com.typesafe.config.ConfigValue arg1) {
-    return this.config.withValue(arg0, arg1);
+  public Config getConfig() {
+    return this.config;
   }
 }
